--- a/build.gradle
+++ b/build.gradle
@@ -87,8 +87,8 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 
 dependencies {
-    implementation "com.github.glitchfiend:TerraBlender-neoforge:1.21.1-4.1.0.8"
-    implementation "curse.maven:selene-499980:6462396"
+    //implementation "com.github.glitchfiend:TerraBlender-neoforge:1.21.1-4.1.0.8"
+    // implementation "curse.maven:selene-499980:6462396"
 
     // Specify the version of Minecraft to use.
     // Depending on the plugin applied there are several options. We will assume you applied the userdev plugin as shown above.
