--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -48,8 +48,8 @@ config="perfectparitypg.mixins.json"
 # The [[accessTransformers]] block allows you to declare where your AT file is.
 # If this block is omitted, a fallback attempt will be made to load an AT from META-INF/accesstransformer.cfg
 #[[accessTransformers]]
-file="META-INF/accesstransformer.cfg"
-accessWidener="perfectparitypg.accesswidener"
+#file="META-INF/accesstransformer.cfg"
+#accessWidener="minecraft.accesswidener"
 
 # The coremods config file path is not configurable and is always loaded from META-INF/coremods.json
 
