--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,9 @@ group = mod_group_id
 
 repositories {
     mavenLocal()
+
     maven {url "https://cursemaven.com"}
-    maven {url "https://maven.su5ed.dev/releases"}
+
     maven { url = 'https://maven.minecraftforge.net/' }
     maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
 
@@ -87,7 +88,8 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 
 dependencies {
-    //implementation "com.github.glitchfiend:TerraBlender-neoforge:1.21.1-4.1.0.8"
+
+    implementation "com.github.glitchfiend:TerraBlender-neoforge:1.21.1-4.1.0.8"
     // implementation "curse.maven:selene-499980:6462396"
 
     // Specify the version of Minecraft to use.
