--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -14,6 +14,9 @@ license="${mod_license}"
 #issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
+
+# enumExtensions="META-INF/enumextensions.json"
+
 # The modid of the mod
 modId="${mod_id}" #mandatory
 # The version number of the mod
