--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -15,7 +15,7 @@ license = "${mod_license}"
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 
-# enumExtensions="META-INF/enumextensions.json"
+ enumExtensions="META-INF/enumextensions.json"
 
 # The modid of the mod
 modId = "${mod_id}" #mandatory
