--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ loader_version_range=[4,)
 mod_id=perfectparitypg
 mod_name=PerfectParityPG
 mod_license=All-Rights-Reserved
-mod_version=1.0-SNAPSHOT
+mod_version=1.2.0
 mod_group_id=org.arcticquests.dev
 mod_authors=JaaiDead
 mod_description=Perfect Parity
